@@ -1,33 +1,23 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
- */
-
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
-
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // This dependency is used by the application.
     implementation libs.guava
+
+    implementation "org.openjfx:javafx-controls:21.0.7"
+    implementation "org.openjfx:javafx-fxml:21.0.7"
     implementation 'mysql:mysql-connector-java:8.0.33'
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
@@ -35,16 +25,29 @@ java {
 }
 
 javafx {
-    version = "17.0.8"
-    modules = [ 'javafx.controls' ]
+    version = "21.0.7"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'pbl3_gradle.App'
+    applicationDefaultJvmArgs = [
+            '--module-path', 'C:/Users/DELL/Downloads/openjfx-21.0.7_windows-x64_bin-sdk/javafx-sdk-21.0.7/lib',
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
+}
+tasks.register('runJavaFX', JavaExec) {
+    group = 'application'
+    description = 'Run the JavaFX application manually'
+    mainClass.set('pbl3_gradle.App')
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs = [
+            '--module-path', 'C:/Users/DELL/Downloads/openjfx-21.0.7_windows-x64_bin-sdk/javafx-sdk-21.0.7/lib',
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
 }
 
+
 tasks.named('test') {
-    // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
